<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Logo UTM -->

        <!-- Contenedor de la foto de perfil -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="120dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/desc_logo_utm"
            android:scaleType="centerCrop"
            android:src="@mipmap/logo_uth_foreground" />

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray_50">

            <ImageView
                android:id="@+id/ivFotoPerfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_foto_perfil"
                android:scaleType="centerCrop" />

        </FrameLayout>

        <!-- Botón Tomar Fotografía -->
        <Button
            android:id="@+id/btnTomarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/green_500"
            android:text="@string/btn_tomar_fotografia" />

        <!-- Campos de formulario -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefono"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLatitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_latitud"
                android:inputType="numberDecimal|numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLongitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_longitud"
                android:inputType="numberDecimal|numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botones de acción -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btnSalvarContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/green_500"
                android:text="@string/btn_salvar_contacto" />

            <Button
                android:id="@+id/btnContactosSalvados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_500"
                android:text="@string/btn_contactos_salvados" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>